--- a/src/assets/styles/postCard.css
+++ b/src/assets/styles/postCard.css
@@ -6,6 +6,8 @@
   width: 100%;
   display: flex;
   justify-content: center;
+  border-radius: 12px;
+  overflow: hidden;
 }
 .postContainer {
   display: flex;
