--- a/src/assets/styles/wall.css
+++ b/src/assets/styles/wall.css
@@ -32,6 +32,7 @@
     justify-self: center;
     border-radius: 8px;
     box-shadow: inset;
+    overflow: hidden;
 }
 
 .wallNav {
